--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>planit</title>
+    <title>PlanIt</title>
     <link href="src/index.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/5988313.png">
   </head>
   <body>
     <div id="root"></div>
